<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationActivity">

    <TextView
        android:id="@+id/location_text"
        android:layout_width="311dp"
        android:layout_height="57dp"
        android:text="@string/location_textview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/get_location_button"
        app:layout_constraintVertical_bias="0.428" />

    <TextView
        android:id="@+id/address_textview"
        android:layout_width="300dp"
        android:layout_height="77dp"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/location_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/get_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_location"
        app:layout_constraintTop_toBottomOf="@+id/address_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/address_text"
        android:layout_width="244dp"
        android:layout_height="20dp"
        android:text="@string/button_info"
        app:layout_constraintTop_toBottomOf="@+id/get_location_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/get_address_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_address"
        app:layout_constraintTop_toBottomOf="@+id/address_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_address_button"
        app:layout_constraintTop_toBottomOf="@+id/get_address_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
